# zahner_link

./: LICENSE  README.md
cpp/BasicIntroduction/: CMakeLists.txt  eis_combined.zmx  eis_generate.zmx  eis_table.zmx  main.cpp  polarization.zmx
python/ArbitrarySignal/: ArbitrarySignal.ipynb
python/BasicIntroduction/: BasicIntroduction.ipynb  polarization.zmx
python/ChannelConfiguration/: ChannelConfiguration.ipynb
python/CurrentDependentCharacterization/: CurrentDependentCharacterization.ipynb  diode_fast_single_freq_eis.zmx
python/CurrentVoltageCurves/: CurrentVoltageCurves.ipynb
python/Eis/: Eis.ipynb  eis_dict_table_job.zmx  eis_dict_table_same_freq_job.zmx  eis_generate_job.zmx  eis_table_job.zmx
python/EisWaves/: EisWaves.ipynb
python/ErrorHandling/: ErrorHandling.ipynb
python/LiveDataCallbacks/: LiveDataCallbacks.ipynb
python/Polarizations/: Polarizations.ipynb  polarization.zmx
python/PulseVoltammetry/: PulseVoltammetry.ipynb  dpv.zmx  npv.zmx  swv.zmx
python/StopConditions/: StopConditions.ipynb  charge.zmx
python/TempuRmuxMio/: TempuRmuxMio.ipynb  eis_with_tempu.zmx  ocv_with_tempu.zmx
